cmake_minimum_required(VERSION 3.8)
project("web")

add_subdirectory("FreeCPlus")
add_subdirectory("client")
add_subdirectory("server")
add_subdirectory("mpserver")
add_subdirectory("mpclient")
add_subdirectory("mtserver")
add_subdirectory("select")
add_subdirectory("poll")
add_subdirectory("ioclient")
